# Antistasi_Template_Checker

./: MANIFEST.in  README.MD  pyproject.toml
antistasi_template_checker/: __init__.py  __main__.py  antistasi_template_parser.py
antistasi_template_checker/data/: general_data.py  identifier_and_name_list_data.7z  identifiers.json  identifiers.py  name_list.json  name_list.py
antistasi_template_checker/engine/: antistasi_template_parser.py
antistasi_template_checker/jsons/: CfgAILevelPresets_item_names.json  CfgAchievements_item_names.json  CfgActions_item_names.json  CfgAddons_item_names.json  CfgAmmo_item_names.json  CfgAnimationSourceSounds_item_names.json  CfgArmorSimulations_item_names.json  CfgArmory_item_names.json  CfgBrains_item_names.json  CfgCameraEffects_item_names.json  CfgChainOfCommand_item_names.json  CfgCloth_item_names.json  CfgCloudlets_item_names.json  CfgCuratorChallenges_item_names.json  CfgCutScenes_item_names.json  CfgDLCNotifications_item_names.json  CfgDamageAround_item_names.json  CfgDefaultKeysPresets_item_names.json  CfgDestroy_item_names.json  CfgDiary_item_names.json  CfgEditorCategories_item_names.json  CfgEditorLayouts_item_names.json  CfgEditorSubcategories_item_names.json  CfgExtendedAnimation_item_names.json  CfgFSMs_item_names.json  CfgFaces_item_names.json  CfgFactionClasses_item_names.json  CfgFontFamilies_item_names.json  CfgGlasses_item_names.json  CfgGroundSupportRequestTypes_item_names.json  CfgGroups_item_names.json  CfgHQIdentities_item_names.json  CfgHeads_item_names.json  CfgHintCategories_item_names.json  CfgHvtObjectives_item_names.json  CfgImprecision_item_names.json  (+63 more)
tools/: checky.cmd  clean_workspace.py  create_venv.cmd  create_venv_extra_envvars.py  log_pipe_create_venv.cmd  prepare_venv_settings.py  pyinstall_it.cmd  remove_connect_by_name.py
(+11 files in other folders)
